fix z-index of footer button

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,8 @@ button:hover {
     }
     .btn-02 {
         bottom: 10px;
+        position: relative;
+        z-index: 5;
     }
     /* SECOND PAGE */
     .page-extra {
@@ -190,7 +192,6 @@ button:hover {
         background: url("../assets/mobile/image-footer.jpg");
         background-position: center;
         background-size: cover;
-        z-index: -5;
     }
     footer:after {
         content: ' ';
@@ -200,8 +201,6 @@ button:hover {
         top: 0;
         bottom: 0;
         background-color: var(--cyan-light);
-        transition: background-color .5s;
-        z-index: -1;
     }
     .footer-explanation {
         color: white;
@@ -210,6 +209,8 @@ button:hover {
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        position: relative;
+        z-index: 1;
     }
     .footer-explanation h1 {
         width: 90%;
@@ -218,6 +219,10 @@ button:hover {
         font-size: 1.5rem;
         font-weight: 800;
         line-height: 1.1;
+    }
+    .footer-btn-wrapper {
+        position: relative;
+        z-index: 5;
     }
     .btn-footer {
         background: var(--purple);
@@ -464,5 +469,17 @@ button:hover {
 @media (min-width: 1700px) {
     .container {
         width: 60%;
+    }
+}
+
+@media (min-width: 2000px) {
+    .container {
+        width: 50%;
+    }
+}
+
+@media (min-width: 2400px) {
+    .container {
+        width: 40%;
     }
 }
